code fixes to a starting state