@@ -1,9 +1,10 @@
 package nl.jixxed.eliteodysseymaterials.templates.horizons.menu;
 
-import javafx.application.Application;
-import javafx.beans.value.ChangeListener;
 import javafx.scene.Node;
-import javafx.scene.control.*;
+import javafx.scene.control.ListCell;
+import javafx.scene.control.ListView;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.TitledPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
@@ -20,10 +21,8 @@ import nl.jixxed.eliteodysseymaterials.helper.BlueprintHelper;
 import nl.jixxed.eliteodysseymaterials.service.LocaleService;
 import nl.jixxed.eliteodysseymaterials.service.event.*;
 import nl.jixxed.eliteodysseymaterials.service.event.EventListener;
-import nl.jixxed.eliteodysseymaterials.templates.destroyables.Destroyable;
-import nl.jixxed.eliteodysseymaterials.templates.destroyables.DestroyableComboBox;
+import nl.jixxed.eliteodysseymaterials.templates.destroyables.*;
 import nl.jixxed.eliteodysseymaterials.templates.generic.About;
-import org.controlsfx.control.SegmentedButton;
 
 import java.util.*;
 import java.util.function.Supplier;
@@ -31,69 +30,123 @@ import java.util.stream.Collectors;
 
 @Slf4j
 public
-class HorizonsBlueprintBar extends Accordion {
+class HorizonsBlueprintBar extends DestroyableAccordion implements DestroyableEventTemplate {
     private static final String BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS = "blueprint-titled-pane-content";
     private static final String BLUEPRINT_LIST_STYLE_CLASS = "blueprint-list";
-    private About about;
-    private TitledPane[] categoryTitledPanes;
-    private TitledPane aboutTitledPane;
-    private final Application application;
+
+    private static final Callback<ListView<HorizonsBlueprintName>, ListCell<HorizonsBlueprintName>> cellFactory = _ -> new DestroyableListCell<>() {
+
+        @SuppressWarnings("java:S1068")
+        private final nl.jixxed.eliteodysseymaterials.service.event.EventListener<StorageEvent> storageEventListener = register(EventService.addListener(true,  this, StorageEvent.class, _ -> {
+            updateStyle(getItem());
+            updateText(getItem(), this.emptyProperty().get());
+        }));
+
+        @SuppressWarnings("java:S1068")
+        private final EventListener<EngineerEvent> engineerEventListener = register(EventService.addListener(true, this, EngineerEvent.class, _ -> {
+            updateStyle(getItem());
+            updateText(getItem(), this.emptyProperty().get());
+        }));
 
 
-    public HorizonsBlueprintBar(final Application application) {
-        this.application = application;
+        @Override
+        protected void updateItem(final HorizonsBlueprintName item, final boolean empty) {
+            super.updateItem(item, empty);
+            updateText(item, empty);
+            updateStyle(item);
+        }
+
+        private void updateText(final HorizonsBlueprintName item, final boolean empty) {
+            if (empty || item == null) {
+                setText(null);
+                setGraphic(null);
+            } else {
+                setText(item + (BlueprintHelper.isCompletedEngineerRecipe(item) ? " \u2714" : ""));
+            }
+        }
+
+        private void updateStyle(final HorizonsBlueprintName item) {
+            if (item != null && BlueprintHelper.isCompletedEngineerRecipe(item)) {
+                this.setStyle("-fx-text-fill: #89d07f;");
+            } else {
+                this.setStyle("-fx-text-fill: white;");
+            }
+        }
+
+    };
+
+    public HorizonsBlueprintBar() {
         initComponents();
-
+        initEventHandling();
     }
 
-    private void initComponents() {
+    public void initComponents() {
         this.getStyleClass().add("blueprint-bar");
-        this.categoryTitledPanes = HorizonsBlueprintConstants.RECIPES.entrySet().stream()
+        TitledPane[] categoryTitledPanes = HorizonsBlueprintConstants.RECIPES.entrySet().stream()
                 .sorted(Comparator.comparing(recipeCategoryMapEntry -> recipeCategoryMapEntry.getKey().getOrder()))
                 .map(this::createBlueprintCategoryTitledPane)
                 .toArray(TitledPane[]::new);
 
-        final TitledPane categoryTitledPaneEngineers = createCategoryTitledPaneEngineers(HorizonsBlueprintConstants.getEngineerUnlockRequirements());
-        final TitledPane categoryTitledPaneExperimental = createExperimentalEffectsCategoryTitledPane(HorizonsBlueprintConstants.getExperimentalEffects());
-        final TitledPane categoryTitledPaneSynthesis = createSynthesisCategoryTitledPane(HorizonsBlueprintConstants.getSynthesis());
-        final TitledPane categoryTitledPaneTechBroker = createTechbrokerCategoryTitledPane(HorizonsBlueprintConstants.getTechbrokerUnlocks());
-        initAboutTitledPane();
+        final DestroyableTitledPane categoryTitledPaneEngineers = createCategoryTitledPaneEngineers(HorizonsBlueprintConstants.getEngineerUnlockRequirements());
+        final DestroyableTitledPane categoryTitledPaneExperimental = createExperimentalEffectsCategoryTitledPane(HorizonsBlueprintConstants.getExperimentalEffects());
+        final DestroyableTitledPane categoryTitledPaneSynthesis = createSynthesisCategoryTitledPane(HorizonsBlueprintConstants.getSynthesis());
+        final DestroyableTitledPane categoryTitledPaneTechBroker = createTechbrokerCategoryTitledPane(HorizonsBlueprintConstants.getTechbrokerUnlocks());
+        final DestroyableTitledPane aboutTitledPane = createAboutTitledPane();
         this.getPanes().addAll(categoryTitledPaneEngineers);
-        this.getPanes().addAll(this.categoryTitledPanes);
+        this.getPanes().addAll(categoryTitledPanes);
         this.getPanes().addAll(categoryTitledPaneExperimental);
         this.getPanes().addAll(categoryTitledPaneSynthesis);
         this.getPanes().addAll(categoryTitledPaneTechBroker);
-        this.getPanes().add(this.aboutTitledPane);
-        this.setExpandedPane(this.aboutTitledPane);
+        this.getPanes().add(aboutTitledPane);
+        this.setExpandedPane(aboutTitledPane);
     }
 
-    private void initAboutTitledPane() {
-        this.about = new About(this.application);
-        this.aboutTitledPane = TitledPaneBuilder.builder().withContent(this.about).withText(LocaleService.getStringBinding("menu.about")).build();
+    @Override
+    public void initEventHandling() {
+
     }
 
-    private TitledPane createTechbrokerCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, HorizonsBlueprint>> recipesEntry) {
-        final ScrollPane scroll = createScrollPane();
+    private DestroyableTitledPane createAboutTitledPane() {
+        About about = new About();
+        return TitledPaneBuilder.builder()
+                .withContent(about)
+                .withText("menu.about")
+                .build();
+    }
+
+    private DestroyableTitledPane createTechbrokerCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, HorizonsBlueprint>> recipesEntry) {
+        final DestroyableScrollPane scroll = createScrollPane();
 
         final DestroyableComboBox<HorizonsBlueprintType> types = ComboBoxBuilder.builder(HorizonsBlueprintType.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
                 .asLocalized()
                 .build();
-        final DestroyableComboBox<HorizonsBlueprintName> blueprints = createBlueprintsComboboxForTypes(types, recipesEntry.keySet(), recipesEntry.entrySet().stream().map(horizonsBlueprintNameMapEntry -> Map.entry(horizonsBlueprintNameMapEntry.getKey(), horizonsBlueprintNameMapEntry.getValue().keySet())).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
-        final TitledPane categoryTitledPane = createTitledPane(BlueprintCategory.TECHBROKER.getLocalizationKey());
+        DestroyableComboBox<HorizonsBlueprintName> blueprints = createBlueprintsComboboxForTypes(types, recipesEntry.keySet(), recipesEntry.entrySet().stream().map(horizonsBlueprintNameMapEntry -> Map.entry(horizonsBlueprintNameMapEntry.getKey(), horizonsBlueprintNameMapEntry.getValue().keySet())).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+        DestroyableTitledPane categoryTitledPane = createTitledPane(BlueprintCategory.TECHBROKER.getLocalizationKey());
 
-        types.addChangeListener(types.valueProperty(), (ChangeListener<HorizonsBlueprintType>) (observable, oldValue, newValue) -> {
+        types.addChangeListener(types.valueProperty(), (_, _, newValue) -> {
             if (newValue != null) {
                 setContent(scroll, blueprints.getSelectionModel().getSelectedItem(), types.getSelectionModel().getSelectedItem(), true,
                         generateContent(recipesEntry.getOrDefault(blueprints.getSelectionModel().getSelectedItem(), Collections.emptyMap()).get(types.getSelectionModel().getSelectedItem())));
             }
             types.setVisibleRowCount(types.getItems().size());
         });
-        final HBox hBoxBlueprints = BoxBuilder.builder().withNode(blueprints).buildHBox();
-        final HBox hBoxTypes = BoxBuilder.builder().withNode(types).buildHBox();
+        final DestroyableHBox hBoxBlueprints = BoxBuilder.builder()
+                .withNode(blueprints).buildHBox();
+        final DestroyableHBox hBoxTypes = BoxBuilder.builder()
+                .withNode(types).buildHBox();
         HBox.setHgrow(blueprints, Priority.ALWAYS);
         HBox.setHgrow(types, Priority.ALWAYS);
+
+        //auto select first option
+        blueprints.getSelectionModel().select(0);
+        final DestroyableVBox content = BoxBuilder.builder()
+                .withStyleClass(BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS)
+                .withNodes(hBoxBlueprints, hBoxTypes, scroll)
+                .buildVBox();
+        categoryTitledPane.setContent(content);
+        VBox.setVgrow(scroll, Priority.ALWAYS);
         register(EventService.addListener(true, this, HorizonsBlueprintClickEvent.class, blueprintClickEvent -> {
             if (blueprintClickEvent.getBlueprint().getBlueprintName() instanceof HorizonsBlueprintName blueprintName
                     && BlueprintCategory.TECHBROKER.equals(blueprintName.getBlueprintCategory())
@@ -102,17 +155,7 @@ class HorizonsBlueprintBar extends Accordion {
                 types.getSelectionModel().select(getBlueprintType(blueprintClickEvent.getBlueprint()));
                 this.setExpandedPane(categoryTitledPane);
             }
-
         }));
-
-        //auto select first option
-        blueprints.getSelectionModel().select(0);
-        final VBox content = BoxBuilder.builder()
-                .withStyleClass(BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS)
-                .withNodes(hBoxBlueprints, hBoxTypes, scroll)
-                .buildVBox();
-        categoryTitledPane.setContent(content);
-        VBox.setVgrow(scroll, Priority.ALWAYS);
         return categoryTitledPane;
     }
 
@@ -130,8 +173,8 @@ class HorizonsBlueprintBar extends Accordion {
         return null;
     }
 
-    private TitledPane createExperimentalEffectsCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, HorizonsBlueprint>> recipesEntry) {
-        final ScrollPane scroll = createScrollPane();
+    private DestroyableTitledPane createExperimentalEffectsCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, HorizonsBlueprint>> recipesEntry) {
+        final DestroyableScrollPane scroll = createScrollPane();
 
         final DestroyableComboBox<HorizonsBlueprintType> types = ComboBoxBuilder.builder(HorizonsBlueprintType.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
@@ -139,17 +182,19 @@ class HorizonsBlueprintBar extends Accordion {
                 .build();
         final DestroyableComboBox<HorizonsBlueprintName> blueprints = createBlueprintsComboboxForTypes(types, recipesEntry.keySet(), recipesEntry.entrySet().stream().map(horizonsBlueprintNameMapEntry -> Map.entry(horizonsBlueprintNameMapEntry.getKey(), horizonsBlueprintNameMapEntry.getValue().keySet())).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
-        final TitledPane categoryTitledPane = createTitledPane(BlueprintCategory.EXPERIMENTAL_EFFECTS.getLocalizationKey());
+        final DestroyableTitledPane categoryTitledPane = createTitledPane(BlueprintCategory.EXPERIMENTAL_EFFECTS.getLocalizationKey());
 
-        types.addChangeListener(types.valueProperty(), (ChangeListener<HorizonsBlueprintType>) (observable, oldValue, newValue) -> {
+        types.addChangeListener(types.valueProperty(), (_, _, newValue) -> {
             if (newValue != null) {
                 setContent(scroll, blueprints.getSelectionModel().getSelectedItem(), types.getSelectionModel().getSelectedItem(), true,
                         generateContent(recipesEntry.getOrDefault(blueprints.getSelectionModel().getSelectedItem(), Collections.emptyMap()).get(types.getSelectionModel().getSelectedItem())));
             }
             types.setVisibleRowCount(types.getItems().size());
         });
-        final HBox hBoxBlueprints = BoxBuilder.builder().withNode(blueprints).buildHBox();
-        final HBox hBoxTypes = BoxBuilder.builder().withNode(types).buildHBox();
+        final DestroyableHBox hBoxBlueprints = BoxBuilder.builder()
+                .withNode(blueprints).buildHBox();
+        final DestroyableHBox hBoxTypes = BoxBuilder.builder()
+                .withNode(types).buildHBox();
         HBox.setHgrow(blueprints, Priority.ALWAYS);
         HBox.setHgrow(types, Priority.ALWAYS);
         register(EventService.addListener(true, this, HorizonsBlueprintClickEvent.class, blueprintClickEvent -> {
@@ -173,18 +218,19 @@ class HorizonsBlueprintBar extends Accordion {
         return categoryTitledPane;
     }
 
-    private TitledPane createSynthesisCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
-        final ScrollPane scroll = createScrollPane();
-        final List<ToggleButton> toggleButtons = new ArrayList<>();
+    private DestroyableTitledPane createSynthesisCategoryTitledPane(final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
+        final DestroyableScrollPane scroll = createScrollPane();
+        final List<DestroyableToggleButton> toggleButtons = new ArrayList<>();
         final DestroyableComboBox<HorizonsBlueprintName> blueprints = createBlueprintsComboboxForSynthesis(scroll, toggleButtons, recipesEntry.keySet(), HorizonsBlueprintType.SYNTHESIS, recipesEntry);
 
-        final TitledPane categoryTitledPane = createTitledPane(BlueprintCategory.SYNTHESIS.getLocalizationKey());
+        final DestroyableTitledPane categoryTitledPane = createTitledPane(BlueprintCategory.SYNTHESIS.getLocalizationKey());
 
         toggleButtons.addAll(getSynthesisToggleButtons(scroll, () -> HorizonsBlueprintType.SYNTHESIS, () -> blueprints.getSelectionModel().getSelectedItem(), recipesEntry));
-        final SegmentedButton gradeButtons = createGradeSegmentedButton(toggleButtons);
+        final DestroyableSegmentedButton gradeButtons = createGradeSegmentedButton(toggleButtons);
 
 
-        final HBox hBoxBlueprints = BoxBuilder.builder().withNode(blueprints).buildHBox();
+        final DestroyableHBox hBoxBlueprints = BoxBuilder.builder()
+                .withNode(blueprints).buildHBox();
         HBox.setHgrow(blueprints, Priority.ALWAYS);
         register(EventService.addListener(true, this, HorizonsBlueprintClickEvent.class, blueprintClickEvent -> {
             if (blueprintClickEvent.getBlueprint().getBlueprintName() instanceof HorizonsBlueprintName blueprintName && BlueprintCategory.SYNTHESIS.equals(blueprintName.getBlueprintCategory())) {
@@ -203,7 +249,7 @@ class HorizonsBlueprintBar extends Accordion {
 
         //auto select first option
         blueprints.getSelectionModel().select(0);
-        final VBox content = BoxBuilder.builder()
+        final DestroyableVBox content = BoxBuilder.builder()
                 .withStyleClass(BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS)
                 .withNodes(hBoxBlueprints, gradeButtons, scroll)
                 .buildVBox();
@@ -213,7 +259,7 @@ class HorizonsBlueprintBar extends Accordion {
     }
 
     private TitledPane createBlueprintCategoryTitledPane(final Map.Entry<BlueprintCategory, Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, Map<HorizonsBlueprintGrade, HorizonsBlueprint>>>> recipesEntry) {
-        final ScrollPane scroll = createScrollPane();
+        final DestroyableScrollPane scroll = createScrollPane();
 
         final DestroyableComboBox<HorizonsBlueprintType> types = ComboBoxBuilder.builder(HorizonsBlueprintType.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
@@ -227,11 +273,11 @@ class HorizonsBlueprintBar extends Accordion {
                         .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
         );
 
-        final TitledPane categoryTitledPane = createTitledPane(recipesEntry.getKey().getLocalizationKey());
-        final List<ToggleButton> toggleButtons = getGradeToggleButtons(scroll, () -> types.getSelectionModel().getSelectedItem(), () -> blueprints.getSelectionModel().getSelectedItem(), recipesEntry.getValue());
-        final SegmentedButton gradeButtons = createGradeSegmentedButton(toggleButtons);
+        final DestroyableTitledPane categoryTitledPane = createTitledPane(recipesEntry.getKey().getLocalizationKey());
+        final List<DestroyableToggleButton> toggleButtons = getGradeToggleButtons(scroll, () -> types.getSelectionModel().getSelectedItem(), () -> blueprints.getSelectionModel().getSelectedItem(), recipesEntry.getValue());
+        final DestroyableSegmentedButton gradeButtons = createGradeSegmentedButton(toggleButtons);
 
-        types.addChangeListener(types.valueProperty(), (ChangeListener<HorizonsBlueprintType>) (observable, oldValue, newValue) -> {
+        types.addChangeListener(types.valueProperty(), (_, _, newValue) -> {
             if (newValue != null) {
                 final Set<HorizonsBlueprintGrade> blueprintGrades = HorizonsBlueprintConstants.getBlueprintGrades(blueprints.getSelectionModel().getSelectedItem(), newValue);
                 configureToggleButtonsState(toggleButtons, blueprints.getSelectionModel().getSelectedItem(), blueprintGrades);
@@ -259,15 +305,17 @@ class HorizonsBlueprintBar extends Accordion {
                 this.setExpandedPane(categoryTitledPane);
             }
         }));
-        final HBox hBoxBlueprints = BoxBuilder.builder().withNode(blueprints).buildHBox();
-        final HBox hBoxTypes = BoxBuilder.builder().withNode(types).buildHBox();
+        final DestroyableHBox hBoxBlueprints = BoxBuilder.builder()
+                .withNode(blueprints).buildHBox();
+        final DestroyableHBox hBoxTypes = BoxBuilder.builder()
+                .withNode(types).buildHBox();
         HBox.setHgrow(blueprints, Priority.ALWAYS);
         HBox.setHgrow(types, Priority.ALWAYS);
 
 
         //auto select first option
         blueprints.getSelectionModel().select(0);
-        final VBox content = BoxBuilder.builder()
+        final DestroyableVBox content = BoxBuilder.builder()
                 .withStyleClass(BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS)
                 .withNodes(hBoxBlueprints, hBoxTypes, gradeButtons, scroll)
                 .buildVBox();
@@ -283,25 +331,27 @@ class HorizonsBlueprintBar extends Accordion {
         return menuCategory.equals(blueprintCategory);
     }
 
-    private SegmentedButton createGradeSegmentedButton(final List<ToggleButton> toggleButtons) {
-        final SegmentedButton segmentedButton = new SegmentedButton(toggleButtons.toArray(ToggleButton[]::new));
-        segmentedButton.getStyleClass().add(BLUEPRINT_LIST_STYLE_CLASS);
+    private DestroyableSegmentedButton createGradeSegmentedButton(final List<DestroyableToggleButton> toggleButtons) {
+        final DestroyableSegmentedButton segmentedButton = SegmentedButtonBuilder.builder()
+                .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
+                .withButtons(toggleButtons)
+                .build();
         HBox.setHgrow(segmentedButton, Priority.ALWAYS);
         return segmentedButton;
     }
 
-    private TitledPane createTitledPane(final String localizationKey) {
+    private DestroyableTitledPane createTitledPane(final String localizationKey) {
         return TitledPaneBuilder.builder()
                 .withStyleClass("category-title-pane")
-                .withText(LocaleService.getStringBinding(localizationKey))
+                .withText(localizationKey)
                 .build();
     }
 
-    private DestroyableComboBox<HorizonsBlueprintName> createBlueprintsComboboxForSynthesis(final ScrollPane scroll, final List<ToggleButton> toggleButtons, final Set<HorizonsBlueprintName> horizonsBlueprintNames, final HorizonsBlueprintType type, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipeEntry) {
+    private DestroyableComboBox<HorizonsBlueprintName> createBlueprintsComboboxForSynthesis(final DestroyableScrollPane scroll, final List<DestroyableToggleButton> toggleButtons, final Set<HorizonsBlueprintName> horizonsBlueprintNames, final HorizonsBlueprintType type, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipeEntry) {
         final DestroyableComboBox<HorizonsBlueprintName> blueprints = ComboBoxBuilder.builder(HorizonsBlueprintName.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
                 .withItemsProperty(LocaleService.getListBinding(horizonsBlueprintNames.stream().sorted(Comparator.comparing(recipeName -> LocaleService.getLocalizedStringForCurrentLocale(recipeName.getLocalizationKey()))).toArray(HorizonsBlueprintName[]::new)))
-                .withValueChangeListener((observable, oldValue, newValue) -> {
+                .withValueChangeListener((_, _, newValue) -> {
                     if (newValue != null) {
                         final Set<HorizonsBlueprintGrade> blueprintGrades = HorizonsBlueprintConstants.getSynthesisBlueprintGrades(newValue);
                         configureToggleButtonsState(toggleButtons, newValue, blueprintGrades);
@@ -314,7 +364,7 @@ class HorizonsBlueprintBar extends Accordion {
         return blueprints;
     }
 
-    private void configureToggleButtonsState(final List<ToggleButton> toggleButtons, final HorizonsBlueprintName newValue, final Set<HorizonsBlueprintGrade> blueprintGrades) {
+    private void configureToggleButtonsState(final List<DestroyableToggleButton> toggleButtons, final HorizonsBlueprintName newValue, final Set<HorizonsBlueprintGrade> blueprintGrades) {
         toggleButtons.forEach(toggleButton -> toggleButton.setDisable(true));
         blueprintGrades.forEach(blueprintGrade -> {
             switch (blueprintGrade) {
@@ -335,9 +385,9 @@ class HorizonsBlueprintBar extends Accordion {
         final DestroyableComboBox<HorizonsBlueprintName> blueprints = ComboBoxBuilder.builder(HorizonsBlueprintName.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
                 .withItemsProperty(LocaleService.getListBinding(horizonsBlueprintNames.stream().sorted(Comparator.comparing(recipeName -> LocaleService.getLocalizedStringForCurrentLocale(recipeName.getLocalizationKey()))).toArray(HorizonsBlueprintName[]::new)))
-                .withValueChangeListener((observable, oldValue, newValue) -> {
+                .withValueChangeListener((_, _, newValue) -> {
                     if (newValue != null) {
-                        types.itemsProperty().bind(LocaleService.getListBinding(typesMap.get(newValue).stream().sorted(Comparator.comparing(type -> LocaleService.getLocalizedStringForCurrentLocale(type.getLocalizationKey()))).toArray(HorizonsBlueprintType[]::new)));
+                        types.addBinding(types.itemsProperty(), LocaleService.getListBinding(typesMap.get(newValue).stream().sorted(Comparator.comparing(type -> LocaleService.getLocalizedStringForCurrentLocale(type.getLocalizationKey()))).toArray(HorizonsBlueprintType[]::new)));
                         types.getSelectionModel().select(0);
                     }
                 })
@@ -347,8 +397,8 @@ class HorizonsBlueprintBar extends Accordion {
         return blueprints;
     }
 
-    private ScrollPane createScrollPane() {
-        final ScrollPane scroll = new ScrollPane();
+    private DestroyableScrollPane createScrollPane() {
+        final DestroyableScrollPane scroll = ScrollPaneBuilder.builder().build();
         scroll.setVbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
         scroll.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
         scroll.setPannable(true);
@@ -357,26 +407,31 @@ class HorizonsBlueprintBar extends Accordion {
         return scroll;
     }
 
-    private List<ToggleButton> getGradeToggleButtons(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, Map<HorizonsBlueprintGrade, HorizonsBlueprint>>> recipeEntry) {
-        final ToggleButton toggleButton1 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_1, recipeEntry);
-        final ToggleButton toggleButton2 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_2, recipeEntry);
-        final ToggleButton toggleButton3 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_3, recipeEntry);
-        final ToggleButton toggleButton4 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_4, recipeEntry);
-        final ToggleButton toggleButton5 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_5, recipeEntry);
+    private List<DestroyableToggleButton> getGradeToggleButtons(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, Map<HorizonsBlueprintGrade, HorizonsBlueprint>>> recipeEntry) {
+        final DestroyableToggleButton toggleButton1 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_1, recipeEntry);
+        final DestroyableToggleButton toggleButton2 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_2, recipeEntry);
+        final DestroyableToggleButton toggleButton3 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_3, recipeEntry);
+        final DestroyableToggleButton toggleButton4 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_4, recipeEntry);
+        final DestroyableToggleButton toggleButton5 = getToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_5, recipeEntry);
         return List.of(toggleButton1, toggleButton2, toggleButton3, toggleButton4, toggleButton5);
     }
 
-    private List<ToggleButton> getSynthesisToggleButtons(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
-        final ToggleButton toggleButton1 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_1, recipesEntry);
-        final ToggleButton toggleButton2 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_2, recipesEntry);
-        final ToggleButton toggleButton3 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_3, recipesEntry);
+    private List<DestroyableToggleButton> getSynthesisToggleButtons(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
+        final DestroyableToggleButton toggleButton1 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_1, recipesEntry);
+        final DestroyableToggleButton toggleButton2 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_2, recipesEntry);
+        final DestroyableToggleButton toggleButton3 = getSynthesisToggleButton(scroll, selectedType, selectedBlueprint, HorizonsBlueprintGrade.GRADE_3, recipesEntry);
         return List.of(toggleButton1, toggleButton2, toggleButton3);
     }
 
-    private ToggleButton getToggleButton(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final HorizonsBlueprintGrade grade, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, Map<HorizonsBlueprintGrade, HorizonsBlueprint>>> recipeEntry) {
-        final ToggleButton toggleButton = ToggleButtonBuilder.builder().withStyleClass("recipe-grade-togglebutton").build();
-        toggleButton.setGraphic(ResizableImageViewBuilder.builder().withImage("/images/ships/engineers/ranks/" + grade.getGrade() + ".png").withStyleClasses("blueprint-grade-image").build());
-        toggleButton.selectedProperty().addListener((observable, oldValue, newValue) ->
+    private DestroyableToggleButton getToggleButton(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final HorizonsBlueprintGrade grade, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintType, Map<HorizonsBlueprintGrade, HorizonsBlueprint>>> recipeEntry) {
+        final DestroyableToggleButton toggleButton = ToggleButtonBuilder.builder()
+                .withStyleClass("recipe-grade-togglebutton")
+                .build();
+        toggleButton.setGraphic(ResizableImageViewBuilder.builder()
+                .withImage("/images/ships/engineers/ranks/" + grade.getGrade() + ".png")
+                .withStyleClasses("blueprint-grade-image")
+                .build());
+        toggleButton.addChangeListener(toggleButton.selectedProperty(), (_, _, newValue) ->
         {
             if (Boolean.TRUE.equals(newValue)) {
                 setContent(scroll, selectedBlueprint.get(), selectedType.get(), newValue, generateContent(recipeEntry.getOrDefault(selectedBlueprint.get(), Collections.emptyMap()).getOrDefault(selectedType.get(), Collections.emptyMap()).get(grade)));
@@ -385,9 +440,12 @@ class HorizonsBlueprintBar extends Accordion {
         return toggleButton;
     }
 
-    private ToggleButton getSynthesisToggleButton(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final HorizonsBlueprintGrade grade, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
-        final ToggleButton toggleButton = ToggleButtonBuilder.builder().withText(LocaleService.getStringBinding("blueprint.synthesis.grade" + grade.getGrade())).withStyleClass("recipe-synthesis-togglebutton").build();
-        toggleButton.selectedProperty().addListener((observable, oldValue, newValue) ->
+    private DestroyableToggleButton getSynthesisToggleButton(final ScrollPane scroll, final Supplier<HorizonsBlueprintType> selectedType, final Supplier<HorizonsBlueprintName> selectedBlueprint, final HorizonsBlueprintGrade grade, final Map<HorizonsBlueprintName, Map<HorizonsBlueprintGrade, HorizonsBlueprint>> recipesEntry) {
+        final DestroyableToggleButton toggleButton = ToggleButtonBuilder.builder()
+                .withText("blueprint.synthesis.grade" + grade.getGrade())
+                .withStyleClass("recipe-synthesis-togglebutton")
+                .build();
+        toggleButton.addChangeListener(toggleButton.selectedProperty(), (_, _, newValue) ->
         {
             if (Boolean.TRUE.equals(newValue)) {
                 setContent(scroll, selectedBlueprint.get(), selectedType.get(), newValue, generateContent(recipesEntry.getOrDefault(selectedBlueprint.get(), Collections.emptyMap()).get(grade)));
@@ -423,34 +481,34 @@ class HorizonsBlueprintBar extends Accordion {
         }
     }
 
-    private TitledPane createCategoryTitledPaneEngineers(final Map<HorizonsBlueprintName, ? extends HorizonsEngineerBlueprint> recipesEngineers) {
-        final ScrollPane scroll = createScrollPane();
+    private DestroyableTitledPane createCategoryTitledPaneEngineers(final Map<HorizonsBlueprintName, ? extends HorizonsEngineerBlueprint> recipesEngineers) {
+        final DestroyableScrollPane scroll = createScrollPane();
 
-        final ComboBox<HorizonsBlueprintName> blueprints = ComboBoxBuilder.builder(HorizonsBlueprintName.class)
+        final DestroyableComboBox<HorizonsBlueprintName> blueprints = ComboBoxBuilder.builder(HorizonsBlueprintName.class)
                 .withStyleClass(BLUEPRINT_LIST_STYLE_CLASS)
                 .withItemsProperty(LocaleService.getListBinding(recipesEngineers.keySet().stream().sorted(Comparator.comparing(HorizonsBlueprintName::getLocalizationKey)).toArray(HorizonsBlueprintName[]::new)))
                 .asLocalized()
                 .build();
         blueprints.setVisibleRowCount(blueprints.getItems().size());
 
-        final HBox hBox = BoxBuilder.builder().withNode(blueprints).buildHBox();
+        final DestroyableHBox hBox = BoxBuilder.builder()
+                .withNode(blueprints).buildHBox();
         HBox.setHgrow(blueprints, Priority.ALWAYS);
 
-        final VBox content = BoxBuilder.builder()
+        final DestroyableVBox content = BoxBuilder.builder()
                 .withStyleClass(BLUEPRINT_TITLED_PANE_CONTENT_STYLE_CLASS)
                 .withNodes(hBox, scroll)
                 .buildVBox();
         VBox.setVgrow(scroll, Priority.ALWAYS);
 
-        final TitledPane categoryTitledPane = TitledPaneBuilder.builder()
+        final DestroyableTitledPane categoryTitledPane = TitledPaneBuilder.builder()
                 .withStyleClass("category-title-pane")
-                .withText(LocaleService.getStringBinding(BlueprintCategory.ENGINEER_UNLOCKS.getLocalizationKey()))
+                .withText(BlueprintCategory.ENGINEER_UNLOCKS.getLocalizationKey())
                 .withContent(content)
                 .build();
 
-        blueprints.valueProperty().addListener((obs, oldValue, newValue) -> {
-            setContent(scroll, newValue, HorizonsBlueprintType.ENGINEER, true, generateContent(recipesEngineers.get(newValue)));
-        });
+        blueprints.addChangeListener(blueprints.valueProperty(), (_, _, newValue) ->
+                setContent(scroll, newValue, HorizonsBlueprintType.ENGINEER, true, generateContent(recipesEngineers.get(newValue))));
         register(EventService.addListener(true, this, HorizonsBlueprintClickEvent.class, blueprintClickEvent -> {
             if (blueprintClickEvent.getBlueprint().getBlueprintName() instanceof HorizonsBlueprintName blueprintName && BlueprintCategory.ENGINEER_UNLOCKS.equals(blueprintName.getBlueprintCategory())) {
                 blueprints.getSelectionModel().select(blueprintName);
@@ -463,8 +521,8 @@ class HorizonsBlueprintBar extends Accordion {
                 this.setExpandedPane(categoryTitledPane);
             }
         }));
-        blueprints.setCellFactory(getCellFactory());
-        blueprints.getSelectionModel().select(blueprints.getItems().get(0));
+        blueprints.setCellFactory(cellFactory);
+        blueprints.getSelectionModel().select(blueprints.getItems().getFirst());
         blueprints.setButtonCell(new ListCell<>() {
             @SuppressWarnings("java:S1068")
             private final nl.jixxed.eliteodysseymaterials.service.event.EventListener<StorageEvent> storageEventEventListener = EventService.addListener(true, HorizonsBlueprintBar.this, StorageEvent.class, event -> {
@@ -507,60 +565,5 @@ class HorizonsBlueprintBar extends Accordion {
         return categoryTitledPane;
     }
 
-    private Callback<ListView<HorizonsBlueprintName>, ListCell<HorizonsBlueprintName>> getCellFactory() {
-        return listView -> new ListCell<>() {
 
-            @SuppressWarnings("java:S1068")
-            private final nl.jixxed.eliteodysseymaterials.service.event.EventListener<StorageEvent> storageEventEventListener = EventService.addListener(true, HorizonsBlueprintBar.this, StorageEvent.class, event -> {
-                updateStyle(getItem());
-                updateText(getItem(), this.emptyProperty().get());
-            });
-            @SuppressWarnings("java:S1068")
-            private final EventListener<EngineerEvent> engineerEventEventListener = EventService.addListener(true, HorizonsBlueprintBar.this, EngineerEvent.class, event -> {
-                updateStyle(getItem());
-                updateText(getItem(), this.emptyProperty().get());
-            });
-
-
-            @Override
-            protected void updateItem(final HorizonsBlueprintName item, final boolean empty) {
-                super.updateItem(item, empty);
-                updateText(item, empty);
-                updateStyle(item);
-            }
-
-            private void updateText(final HorizonsBlueprintName item, final boolean empty) {
-                if (empty || item == null) {
-                    setText(null);
-                    setGraphic(null);
-                } else {
-                    setText(item + (BlueprintHelper.isCompletedEngineerRecipe(item) ? " \u2714" : ""));
-                }
-            }
-
-            private void updateStyle(final HorizonsBlueprintName item) {
-                if (item != null && BlueprintHelper.isCompletedEngineerRecipe(item)) {
-                    this.setStyle("-fx-text-fill: #89d07f;");
-                } else {
-                    this.setStyle("-fx-text-fill: white;");
-                }
-            }
-
-        };
-    }
-
-//    private Map<HorizonsBlueprintName, Node> createRecipeContentEngineers(final Map<HorizonsBlueprintName, ? extends HorizonsEngineerBlueprint> recipesEntry, final ComboBox<HorizonsBlueprintName> comboBox, final TitledPane categoryTitledPane) {
-//        final Map<HorizonsBlueprintName, Node> contents = new EnumMap<>(HorizonsBlueprintName.class);
-//        recipesEntry.forEach((key, value) -> {
-//            register(EventService.addListener(true, this, BlueprintClickEvent.class, blueprintClickEvent -> {
-//                if (blueprintClickEvent.getBlueprintName().equals(key)) {
-//                    comboBox.getSelectionModel().select(key);
-//                    this.setExpandedPane(categoryTitledPane);
-//                }
-//            });
-//            final HorizonsBlueprintContent horizonsBlueprintContent = new HorizonsBlueprintContent(value);
-//            contents.put(key, horizonsBlueprintContent);
-//        });
-//        return contents;
-//    }
 }
