@@ -1,24 +1,18 @@
 package nl.jixxed.eliteodysseymaterials.templates.odyssey.menu;
 
 import javafx.collections.ListChangeListener;
-import javafx.scene.control.Label;
-import javafx.scene.control.MenuButton;
 import javafx.scene.control.MenuItem;
 import javafx.scene.input.MouseEvent;
-import javafx.scene.layout.*;
-import javafx.scene.text.Text;
-import javafx.scene.text.TextFlow;
-import nl.jixxed.eliteodysseymaterials.builder.BoxBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.FlowPaneBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.LabelBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.TextBuilder;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.Priority;
+import nl.jixxed.eliteodysseymaterials.builder.*;
 import nl.jixxed.eliteodysseymaterials.domain.*;
 import nl.jixxed.eliteodysseymaterials.enums.*;
 import nl.jixxed.eliteodysseymaterials.service.LocaleService;
 import nl.jixxed.eliteodysseymaterials.service.StorageService;
 import nl.jixxed.eliteodysseymaterials.service.WishlistService;
 import nl.jixxed.eliteodysseymaterials.service.event.*;
-import nl.jixxed.eliteodysseymaterials.templates.destroyables.DestroyableMenuButton;
+import nl.jixxed.eliteodysseymaterials.templates.destroyables.*;
 import nl.jixxed.eliteodysseymaterials.templates.generic.EngineerBlueprintLabel;
 import nl.jixxed.eliteodysseymaterials.templates.generic.Ingredient;
 import nl.jixxed.eliteodysseymaterials.templates.generic.MissionIngredient;
@@ -31,13 +25,13 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-class OdysseyBlueprintContent extends VBox {
+class OdysseyBlueprintContent extends DestroyableVBox implements DestroyableEventTemplate {
     private static final String RECIPE_TITLE_LABEL_STYLE_CLASS = "recipe-title-label";
     private final List<Ingredient> ingredients = new ArrayList<>();
     private final OdysseyBlueprint blueprint;
     private static final ApplicationState APPLICATION_STATE = ApplicationState.getInstance();
-    private Label countLabel;
-    private HBox recipeHeader;
+    private DestroyableLabel countLabel;
+    private DestroyableHBox recipeHeader;
     private DestroyableMenuButton addToWishlist;
 
 
@@ -47,7 +41,7 @@ class OdysseyBlueprintContent extends VBox {
         initEventHandling();
     }
 
-    private void initComponents() {
+    public void initComponents() {
         this.getStyleClass().add("recipe-content");
         loadIngredients();
         initDescription();
@@ -72,17 +66,20 @@ class OdysseyBlueprintContent extends VBox {
     }
 
     private void initSteps() {
-        final Label referralLabelHeader = LabelBuilder.builder()
+        final DestroyableLabel referralLabelHeader = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.label.completed.referrals"))
+                .withText("blueprint.label.completed.referrals")
                 .build();
-        this.getChildren().add(referralLabelHeader);
-        final HBox[] engineerLabels = Stream.of(Engineer.BALTANOS, Engineer.ROSA_DAYETTE, Engineer.ELEANOR_BRESA)
+        this.getNodes().add(referralLabelHeader);
+        final DestroyableHBox[] engineerLabels = Stream.of(Engineer.BALTANOS, Engineer.ROSA_DAYETTE, Engineer.ELEANOR_BRESA)
                 .map(engineer -> new EngineerBlueprintLabel(engineer, true, 0))
-                .sorted(Comparator.comparing(engineerBlueprintLabel -> engineerBlueprintLabel.getLabel().getText()))
-                .toArray(HBox[]::new);
-        final FlowPane flowPane = FlowPaneBuilder.builder().withStyleClass("recipe-engineer-flow").withNodes(engineerLabels).build();
-        this.getChildren().add(flowPane);
+                .sorted(Comparator.comparing(EngineerBlueprintLabel::getEngineerName))
+                .toArray(DestroyableHBox[]::new);
+        final DestroyableFlowPane flowPane = FlowPaneBuilder.builder()
+                .withStyleClass("recipe-engineer-flow")
+                .withNodes(engineerLabels)
+                .build();
+        this.getNodes().add(flowPane);
     }
 
     private void loadIngredients() {
@@ -98,51 +95,59 @@ class OdysseyBlueprintContent extends VBox {
     }
 
     private void initIngredients() {
-        final FlowPane ingredientFlow = FlowPaneBuilder.builder().withStyleClass("recipe-ingredient-flow").withNodes(this.ingredients).build();
-        this.getChildren().add(ingredientFlow);
+        final DestroyableFlowPane ingredientFlow = FlowPaneBuilder.builder()
+                .withStyleClass("recipe-ingredient-flow")
+                .withNodes(this.ingredients)
+                .build();
+        this.getNodes().add(ingredientFlow);
     }
 
     private void initDescription() {
-        final Label descriptionTitle = LabelBuilder.builder()
+        final DestroyableLabel descriptionTitle = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.label.description"))
+                .withText("blueprint.label.description")
                 .build();
 
-        final Region descriptionRegion = new Region();
+        final DestroyableRegion descriptionRegion = new DestroyableRegion();
         HBox.setHgrow(descriptionRegion, Priority.ALWAYS);
 
-        this.recipeHeader = BoxBuilder.builder().withNodes(descriptionTitle, descriptionRegion).buildHBox();
-        final Text description = TextBuilder.builder()
+        this.recipeHeader = BoxBuilder.builder()
+                .withNodes(descriptionTitle, descriptionRegion).buildHBox();
+        final DestroyableText description = TextBuilder.builder()
                 .withStyleClass("blueprint-description-text")
-                .withText(LocaleService.getStringBinding(this.blueprint.getBlueprintName().getDescriptionLocalizationKey()))
+                .withText(this.blueprint.getBlueprintName().getDescriptionLocalizationKey())
                 .build();
-        description.wrappingWidthProperty().bind(this.widthProperty().subtract(35));
-        final TextFlow textFlow = new TextFlow(description);
+        description.addBinding(description.wrappingWidthProperty(), this.widthProperty().subtract(35));
+        final DestroyableTextFlow textFlow = TextFlowBuilder.builder()
+                .withTexts(description)
+                .build();
         textFlow.getStyleClass().add("blueprint-description");
-        this.getChildren().addAll(this.recipeHeader, textFlow);
+        this.getNodes().addAll(this.recipeHeader, textFlow);
     }
 
     private void initTips(final EngineerBlueprint engineerBlueprint) {
-        final Label tipsTitle = LabelBuilder.builder()
+        final DestroyableLabel tipsTitle = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.label.tips"))
+                .withText("blueprint.label.tips")
                 .build();
 
-        final Text tips = TextBuilder.builder()
+        final DestroyableText tips = TextBuilder.builder()
                 .withStyleClass("blueprint-description-text")
-                .withText(LocaleService.getStringBinding(engineerBlueprint.getTipsLocalizationKey()))
+                .withText(engineerBlueprint.getTipsLocalizationKey())
                 .build();
-        tips.wrappingWidthProperty().bind(this.widthProperty().subtract(35));
-        final TextFlow textFlow = new TextFlow(tips);
+        tips.addBinding(tips.wrappingWidthProperty(), this.widthProperty().subtract(35));
+        final DestroyableTextFlow textFlow = TextFlowBuilder.builder()
+                .withTexts(tips)
+                .build();
         textFlow.getStyleClass().add("blueprint-description");
-        this.getChildren().addAll(tipsTitle, textFlow);
+        this.getNodes().addAll(tipsTitle, textFlow);
     }
 
     @SuppressWarnings("java:S1192")
     private void initAsRecipe() {
-        this.addToWishlist = new MenuButton();
+        this.addToWishlist = MenuButtonBuilder.builder().build();
         this.addToWishlist.getStyleClass().add("recipe-wishlist-button");
-        this.addToWishlist.textProperty().bind(LocaleService.getStringBinding("blueprint.add.to.wishlist"));
+        this.addToWishlist.addBinding(this.addToWishlist.textProperty(), LocaleService.getStringBinding("blueprint.add.to.wishlist"));
         this.addToWishlist.getItems().addAll(new ArrayList<>());
         this.addToWishlist.getItems().addListener((ListChangeListener<MenuItem>) c -> {
             if (c.getList().size() <= 1) {
@@ -155,7 +160,7 @@ class OdysseyBlueprintContent extends VBox {
         });
         this.addToWishlist.setOnMouseClicked(event -> {
             if (this.addToWishlist.getItems().size() == 1) {
-                this.addToWishlist.getItems().get(0).fire();
+                this.addToWishlist.getItems().getFirst().fire();
                 event.consume();
             }
         });
@@ -169,31 +174,33 @@ class OdysseyBlueprintContent extends VBox {
                 event.consume();
             }
         });
-        this.countLabel = LabelBuilder.builder().withStyleClass("recipe-wishlist-count").build();
-        this.countLabel.textProperty().bind(LocaleService.getStringBinding("blueprint.on.wishlist", 0));
+        this.countLabel = LabelBuilder.builder()
+                .withStyleClass("recipe-wishlist-count")
+                .build();
+        this.countLabel.addBinding(this.countLabel.textProperty(), LocaleService.getStringBinding("blueprint.on.wishlist", 0));
         APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
             final Wishlists wishlists = loadCommanderWishlists(commander);
             loadInitialCount(wishlists);
         });
-        final HBox box = BoxBuilder.builder()
+        final DestroyableHBox box = BoxBuilder.builder()
                 .withStyleClass("recipe-wishlist-count-box")
                 .withNodes(this.countLabel, this.addToWishlist)
                 .buildHBox();
         HBox.setHgrow(this.addToWishlist, Priority.ALWAYS);
-        this.recipeHeader.getChildren().add(box);
-        final Label materialHeader = LabelBuilder.builder()
+        this.recipeHeader.getNodes().add(box);
+        final DestroyableLabel materialHeader = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.header.material"))
+                .withText("blueprint.header.material")
                 .build();
-        this.getChildren().add(materialHeader);
+        this.getNodes().add(materialHeader);
     }
 
     private void loadInitialCount(final Wishlists wishlists) {
         final long count = wishlists.getSelectedWishlist().getItems().stream().filter(wishlistRecipe -> wishlistRecipe.getRecipeName().equals(this.blueprint.getBlueprintName())).count();
         if (count > 0L) {
-            this.countLabel.textProperty().bind(LocaleService.getStringBinding("blueprint.on.wishlist", count));
+            this.countLabel.addBinding(this.countLabel.textProperty(), LocaleService.getStringBinding("blueprint.on.wishlist", count));
         } else {
-            this.countLabel.textProperty().bind(LocaleService.getStringBinding(() -> ""));
+            this.countLabel.addBinding(this.countLabel.textProperty(), LocaleService.getStringBinding(() -> ""));
         }
     }
 
@@ -211,49 +218,66 @@ class OdysseyBlueprintContent extends VBox {
     }
 
     private void initAsEngineerMission() {
-        final Label materialHeader = LabelBuilder.builder()
+        final DestroyableLabel materialHeader = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.header.objective"))
+                .withText("blueprint.header.objective")
                 .build();
-        this.getChildren().add(materialHeader);
+        this.getNodes().add(materialHeader);
     }
 
     private void initEngineers() {
-        final Label engineerLabelHeader = LabelBuilder.builder()
+        final DestroyableLabel engineerLabelHeader = LabelBuilder.builder()
                 .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
-                .withText(LocaleService.getStringBinding("blueprint.label.engineers"))
+                .withText("blueprint.label.engineers")
                 .build();
-        this.getChildren().add(engineerLabelHeader);
-        final HBox[] engineerLabels = ((ModuleBlueprint) this.blueprint).getEngineers().stream()
+        this.getNodes().add(engineerLabelHeader);
+        final DestroyableHBox[] engineerLabels = ((ModuleBlueprint) this.blueprint).getEngineers().stream()
                 .map(EngineerBlueprintLabel::new)
-                .sorted(Comparator.comparing(engineerBlueprintLabel -> engineerBlueprintLabel.getLabel().getText()))
-                .toArray(HBox[]::new);
-        final FlowPane flowPane = FlowPaneBuilder.builder().withStyleClass("recipe-engineer-flow").withNodes(engineerLabels).build();
-        this.getChildren().add(flowPane);
+                .sorted(Comparator.comparing(EngineerBlueprintLabel::getEngineerName))
+                .toArray(DestroyableHBox[]::new);
+        final DestroyableFlowPane flowPane = FlowPaneBuilder.builder()
+                .withStyleClass("recipe-engineer-flow")
+                .withNodes(engineerLabels)
+                .build();
+        this.getNodes().add(flowPane);
 
     }
 
     private void initModifiers() {
         final Map<OdysseyModifier, String> modifierMap = this.blueprint.getModifiers();
         if (!modifierMap.isEmpty()) {
-            final Label modifierTitle = LabelBuilder.builder().withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS).withText(LocaleService.getStringBinding("blueprint.label.modifiers")).build();
-            this.getChildren().add(modifierTitle);
+            final DestroyableLabel modifierTitle = LabelBuilder.builder()
+                    .withStyleClass(RECIPE_TITLE_LABEL_STYLE_CLASS)
+                    .withText("blueprint.label.modifiers")
+                    .build();
+            this.getNodes().add(modifierTitle);
 
-            final List<HBox> modifiers = modifierMap.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(modifierStringEntry -> {
-                        final Label modifier = LabelBuilder.builder().withStyleClass("recipe-modifier-name").withText(LocaleService.getStringBinding(modifierStringEntry.getKey().getLocalizationKey())).build();
-                        final Label value = LabelBuilder.builder().withStyleClass("recipe-modifier-value").withNonLocalizedText(modifierStringEntry.getValue()).build();
-                        final HBox modifierBox = BoxBuilder.builder().withStyleClass("recipe-modifier").withNodes(modifier, value).buildHBox();
+            final List<DestroyableHBox> modifiers = modifierMap.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(modifierStringEntry -> {
+                        final DestroyableLabel modifier = LabelBuilder.builder()
+                                .withStyleClass("recipe-modifier-name")
+                                .withText(modifierStringEntry.getKey().getLocalizationKey())
+                                .build();
+                        final DestroyableLabel value = LabelBuilder.builder()
+                                .withStyleClass("recipe-modifier-value")
+                                .withNonLocalizedText(modifierStringEntry.getValue())
+                                .build();
+                        final DestroyableHBox modifierBox = BoxBuilder.builder()
+                                .withStyleClass("recipe-modifier")
+                                .withNodes(modifier, value).buildHBox();
                         HBox.setHgrow(value, Priority.ALWAYS);
                         return modifierBox;
                     })
                     .collect(Collectors.toCollection(ArrayList::new));
 
-            final FlowPane modifiersFlowPane = FlowPaneBuilder.builder().withStyleClass("recipe-modifier-flow").withNodes(modifiers).build();
-            this.getChildren().addAll(modifiersFlowPane);
+            final DestroyableFlowPane modifiersFlowPane = FlowPaneBuilder.builder()
+                    .withStyleClass("recipe-modifier-flow")
+                    .withNodes(modifiers)
+                    .build();
+            this.getNodes().addAll(modifiersFlowPane);
         }
     }
 
-    private void initEventHandling() {
+    public void initEventHandling() {
         register(EventService.addListener(true, this, WishlistSelectedEvent.class, wishlistSelectedEvent -> {
             if (!(this.blueprint instanceof EngineerBlueprint) || this.ingredients.stream().noneMatch(ingredient -> OdysseyStorageType.OTHER.equals(ingredient.getType()))) {//material based recipes
                 APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
@@ -280,9 +304,9 @@ class OdysseyBlueprintContent extends VBox {
             if (this.countLabel != null) {
                 final long count = APPLICATION_STATE.getPreferredCommander().map(commander -> WishlistService.getWishlists(commander).getSelectedWishlist().getItems().stream().filter(wishlistRecipe -> wishlistRecipe.getRecipeName().equals(this.blueprint.getBlueprintName())).count()).orElse(0L);
                 if (count > 0L) {
-                    this.countLabel.textProperty().bind(LocaleService.getStringBinding("blueprint.on.wishlist", count));
+                    this.countLabel.addBinding(this.countLabel.textProperty(), LocaleService.getStringBinding("blueprint.on.wishlist", count));
                 } else {
-                    this.countLabel.textProperty().bind(LocaleService.getStringBinding(() -> ""));
+                    this.countLabel.addBinding(this.countLabel.textProperty(), LocaleService.getStringBinding(() -> ""));
                 }
             }
         }));
@@ -290,7 +314,7 @@ class OdysseyBlueprintContent extends VBox {
 
     private List<OdysseyMaterialIngredient> getRecipeIngredients(final Class<? extends OdysseyMaterial> materialClass, final OdysseyStorageType storageType) {
         return this.blueprint.getMaterialCollection(materialClass).entrySet().stream()
-                .map(material -> new OdysseyMaterialIngredient(storageType, material.getKey(), material.getValue(), StorageService.getMaterialCount(material.getKey(),AmountType.TOTAL)))
+                .map(material -> new OdysseyMaterialIngredient(storageType, material.getKey(), material.getValue(), StorageService.getMaterialCount(material.getKey(), AmountType.TOTAL)))
                 .sorted(Comparator.comparing(OdysseyMaterialIngredient::getName))
                 .collect(Collectors.toCollection(ArrayList::new));
     }
